updated index pages and sample works

--- a/Catalog/index.html
+++ b/Catalog/index.html
@@ -82,7 +82,7 @@
         </div>
     </header>
     <div class="black-projects">
-        <h1 style="text-align: center; color:#FF7700; font-size: 120px; padding-bottom: 50px;"> LOGOS </h1>
+        <h1 style="text-align: center; color:#FF7700; font-size: 120px; padding-bottom: 50px;"> CATALOG </h1>
         
         <div class="works-container">
             <div class="sample-grid-item">
