--- a/WebDesign/index.html
+++ b/WebDesign/index.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="../static/Fonts.css">
     <link rel="icon" type="image/x-icon" href="../static/img/Logo-Black.png">
-
     <script src="../script.js"></script>
     <title>Pencil Idea</title>
 </head>
@@ -82,7 +81,7 @@
         </div>
     </header>
     <div class="black-projects">
-        <h1 style="text-align: center; color:#FF7700; font-size: 120px; padding-bottom: 50px;"> LOGOS </h1>
+        <h1 style="text-align: center; color:#FF7700; font-size: 120px; padding-bottom: 50px;"> WEB DESIGN </h1>
         
         <div class="works-container">
             <div class="sample-grid-item">
